--- a/Model Training and Development/main.ipynb
+++ b/Model Training and Development/main.ipynb
@@ -19,7 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install intel_extension_for_pytorch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +37,7 @@
     "import os\n",
     "import collections\n",
     "import pandas\n",
+    "import intel_extension_for_pytorch as ipex\n",
     "\n",
     "import numpy as np\n",
     "import skimage.draw\n",
@@ -340,7 +350,7 @@
     "\n",
     "    if c != 3:\n",
     "        raise ValueError(\"savevideo expects array of shape (channels=3, frames, height, width), got shape ({})\".format(\", \".join(map(str, array.shape))))\n",
-    "    fourcc = cv2.VideoWriter_fourcc('M', 'J', 'P', 'G')\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
     "    out = cv2.VideoWriter(filename, fourcc, fps, (width, height))\n",
     "\n",
     "    for frame in array.transpose((1, 2, 3, 0)):\n",
@@ -551,8 +561,7 @@
     "model = torchvision.models.segmentation.deeplabv3_mobilenet_v3_large(pretrained=True)\n",
     "model.classifier[-1] = torch.nn.Conv2d(model.classifier[-1].in_channels, 1, kernel_size=model.classifier[-1].kernel_size)  # change number of outputs to 1\n",
     "if device.type == \"cuda\":\n",
-    "    model = torch.nn.DataParallel(model)\n",
-    "model = model.to(device)"
+    "    model = torch.nn.DataParallel(model)\n"
    ]
   },
   {
@@ -565,6 +574,17 @@
     "optim = torch.optim.SGD(model.parameters(), lr=1e-5, momentum=0.9, weight_decay=1e-5)\n",
     "lr_step_period = math.inf\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optim, lr_step_period)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimizing the model using the IPEX\n",
+    "model, optim = ipex.optimize(model, optimizer=optim, weights_prepack=False)\n",
+    "model = model.to('cpu')"
    ]
   },
   {
@@ -703,6 +723,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device='cpu'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -732,7 +761,7 @@
     "\n",
     "            ds = dataset[phase]\n",
     "            dataloader = torch.utils.data.DataLoader(\n",
-    "                ds, batch_size=batch_size, num_workers=num_workers, shuffle=True, pin_memory=(device.type == \"cuda\"), drop_last=(phase == \"train\"))\n",
+    "                ds, batch_size=batch_size, num_workers=num_workers, shuffle=True, pin_memory=(device == \"cuda\"), drop_last=(phase == \"train\"))\n",
     "\n",
     "            loss, large_inter, large_union, small_inter, small_union = seg_run_epoch(model, dataloader, phase == \"train\", optim, device)\n",
     "            overall_dice = 2 * (large_inter.sum() + small_inter.sum()) / (large_union.sum() + large_inter.sum() + small_union.sum() + small_inter.sum())\n",
@@ -777,7 +806,7 @@
     "        for split in [\"val\", \"test\"]:\n",
     "            dataset = Echo(root=data_dir, split=split, **kwargs)\n",
     "            dataloader = torch.utils.data.DataLoader(dataset,\n",
-    "                                                        batch_size=batch_size, num_workers=num_workers, shuffle=False, pin_memory=(device.type == \"cuda\"))\n",
+    "                                                        batch_size=batch_size, num_workers=num_workers, shuffle=False, pin_memory=(device == \"cuda\"))\n",
     "            loss, large_inter, large_union, small_inter, small_union = seg_run_epoch(model, dataloader, False, None, device)\n",
     "\n",
     "            overall_dice = 2 * (large_inter + small_inter) / (large_union + large_inter + small_union + small_inter)\n",
@@ -884,9 +913,7 @@
     "feature_extractor = DPTImageProcessor.from_pretrained(\"Intel/dpt-large-ade\")\n",
     "model = DPTForSemanticSegmentation.from_pretrained(\"Intel/dpt-large-ade\")\n",
     "\n",
-    "if device.type == \"cuda\":\n",
-    "    model = torch.nn.DataParallel(model)\n",
-    "model = model.to(device)\n"
+    "model = model.to('cpu')\n"
    ]
   },
   {
@@ -899,6 +926,16 @@
     "optim = torch.optim.SGD(model.parameters(), lr=1e-5, momentum=0.9, weight_decay=1e-5)\n",
     "lr_step_period = math.inf\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optim, lr_step_period)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimizing the model with IPEX \n",
+    "model = ipex.optimize(model,  weights_prepack=False)  "
    ]
   },
   {
@@ -1023,6 +1060,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device='cpu'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -1129,7 +1175,7 @@
     "\n",
     "            ds = dataset[phase]\n",
     "            dataloader = torch.utils.data.DataLoader(\n",
-    "                ds, batch_size=batch_size, num_workers=num_workers, shuffle=True, pin_memory=(device.type == \"cuda\"), drop_last=(phase == \"train\"))\n",
+    "                ds, batch_size=batch_size, num_workers=num_workers, shuffle=True, pin_memory=(device == \"cuda\"), drop_last=(phase == \"train\"))\n",
     "\n",
     "            loss, large_inter, large_union, small_inter, small_union = hf_seg_run_epoch(model, dataloader, phase == \"train\", optim, device)\n",
     "            overall_dice = 2 * (large_inter.sum() + small_inter.sum()) / (large_union.sum() + large_inter.sum() + small_union.sum() + small_inter.sum())\n",
@@ -1174,7 +1220,7 @@
     "        for split in [\"val\", \"test\"]:\n",
     "            dataset = Echo(root=data_dir, split=split, **kwargs)\n",
     "            dataloader = torch.utils.data.DataLoader(dataset,\n",
-    "                                                        batch_size=batch_size, num_workers=num_workers, shuffle=False, pin_memory=(device.type == \"cuda\"))\n",
+    "                                                        batch_size=batch_size, num_workers=num_workers, shuffle=False, pin_memory=(device == \"cuda\"))\n",
     "            loss, large_inter, large_union, small_inter, small_union = seg_run_epoch(model, dataloader, False, None, device)\n",
     "\n",
     "            overall_dice = 2 * (large_inter + small_inter) / (large_union + large_inter + small_union + small_inter)\n",
@@ -1201,7 +1247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf_gpu",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1215,7 +1261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
